# xlzt

./: .gitignore  Cargo.toml  README.md  install.sh  openapi.yaml
.github/workflows/: release.yml
src/: api.rs  cdn.rs  config.rs  main.rs  secret.rs  ui.rs
