[package]
name = "lzt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lzt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = { version = "15", default-features = false, features = ["custom-bindings"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
